@@ -9,6 +9,16 @@ repositories {
 
 }
 
+// For running the application
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
+}
+
+// For running tests (important for Lucene classification tests)
+tasks.withType(Test).configureEach {
+    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
+}
+
 dependencies {
 
     implementation group: 'org.apache.groovy', name: 'groovy', version: '4.0.22'
@@ -20,15 +30,10 @@ dependencies {
     implementation group: 'io.jenetics', name: 'jenetics', version: '7.2.0'
     implementation 'io.jenetics:jenetics.ext:7.2.0'
 
-   // implementation group: 'org.apache.lucene', name: 'lucene-core', version: '9.11.1'
-    //implementation group: 'org.apache.lucene', name: 'lucene-analysis-common', version: '9.11.1'
-    //implementation group: 'org.apache.lucene', name: 'lucene-classification', version: '9.11.1'
-    //implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '9.11.1'
-
-    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '10.3.1'
-    implementation group: 'org.apache.lucene', name: 'lucene-analysis-common', version: '10.3.1'
-    implementation group: 'org.apache.lucene', name: 'lucene-classification', version: '10.3.1'
-    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '10.3.1'
+    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '10.4.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-analysis-common', version: '10.4.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-classification', version: '10.4.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '10.4.0'
 
     testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.3-groovy-4.0'
   //  testImplementation 'org.spockframework:spock-junit-platform:2.4-groovy-5'
